# family-tree

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  project-format.md  releasing.md
docs/plans/: 2026-05-31-testing-architecture-design.md  2026-07-16-open-source-hardening.md
scripts/: avatar-atlas-grid.d.mts  avatar-atlas-grid.mjs  generate-synthetic-family.mjs  run-layout-perf.mjs  slice-synthetic-avatar-atlas.mjs  synthetic-family.d.mts  synthetic-family.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: media.rs  project.rs
src/core/: defaultAvatar.test.ts  defaultAvatar.ts  elkLayout.test.ts  elkLayout.ts  familyIntegrity.test.ts  familyIntegrity.ts  migrate.test.ts  migrate.ts  protagonistLayout.test.ts  protagonistLayout.ts  relativesAdapter.test.ts  relativesAdapter.ts  schema.ts  siblingOrder.test.ts  siblingOrder.ts  treeLayout.mixed-parentage.test.ts  treeLayout.routing-regressions.test.ts  treeLayout.test.ts  treeLayout.ts  treeLayout.worker.ts  treeLayoutCore.ts  treeLayoutProtocol.ts  treeLayoutWorkerClient.test.ts  (+1 more)
test-data/: README.md
(+132 files in other folders)
