[package]
name = "family-tree"
version = "0.1.0"
description = "A desktop family tree application"
authors = ["t7kai"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JingkaiTang/family-tree"

[lib]
name = "family_tree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
webp = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
